--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "devDependencies": {
     "jest": "^25.1.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.3"
   },
   "dependencies": {
     "express": "^4.16.3",
